# tg-bot

./: .env  .gitignore  API_DOCS.md  POETRY_SETUP.md  Poetry.md  README.md  START.md  create_admin.py  do.md  docker-compose.yml  pyproject.toml  setup-poetry.bat  setup-poetry.sh
backend/: Dockerfile  manage.py  requirements.txt
backend/apps/: bot.py.old
backend/apps/bot/: README.md  __init__.py  constants.py  keyboards.py  messages.py  states.py
backend/apps/bot/handlers/: __init__.py  contact.py  profile.py  registration.py  start.py
backend/apps/bot/utils/: __init__.py  db.py  email.py
backend/apps/competitions/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/competitions/migrations/: 0001_initial.py  0002_alter_competition_options_alter_competition_advisers_and_more.py  0003_votertimeslot_and_more.py
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_updated_at_profilechangelog.py  0003_alter_profilechangelog_options_alter_user_options_and_more.py  0004_notificationoutbox.py  0005_registrationrequest_and_more.py
backend/config/: settings.py  urls.py  wsgi.py
